# RAGIT

./: README.md  docker-compose.cpu.yml  docker-compose.yml  pyproject.toml
backend/routers/: chat.py  repository.py
frontend/src/pages/: chat_page.py  repository_settings_page.py
frontend/src/services/: api_service.py
gateway/: main.py
rag_worker/: Dockerfile.cpu  Dockerfile.gpu  README.md  pyproject.toml  tasks.py
rag_worker/git_service/: history_tracker.py  service.py  types.py
rag_worker/models/: __init__.py  database.py  repository.py  types.py
rag_worker/python_parser/: service.py
rag_worker/vector_db/: collection_manager.py  service.py
ragit_sdk/tests/: ask_question.py  create_prompt.py  diff_file.py  embedding.py  test_update_pipeline.py
